[package]
name = "ni-visa-bindings"
version = "1.0.1"
edition = "2021"
authors = [
    "David Kossoglyad <david@logoui.co.il>"
]
description = "Raw Rust bindings to the NI-VISA library, providing low-level access to the National Instruments Virtual Instrument Software Architecture (VISA) API for instrument control and communication."
readme = "readme.md"
license = "MIT"
keywords = ["nivisa", "ni-visa", "visa", "SCPI", "IVI"]
categories = [ "external-ffi-bindings", "hardware-support", "science" ]
repository = "https://github.com/glyad/ni-visa-bindings/"
homepage = "https://github.com/glyad/ni-visa-bindings/"

[build-dependencies]
bindgen = "0.71.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]